# QOL-extension

./: manifest.json
uclearn/: ASCIIMathTeXImg.js  hydration.js  index.css  index.js  patches.js  source.css  video.js
uclearn/mathquill/: bootload.js  mathquill.css  mathquill.js
uclearn/video-player/: Cargo.toml
uclearn/video-player/src/: lib.rs
uclearn/wasm/: Cargo.toml
uclearn/wasm/src/: lib.rs
video-speed/: index.css  index.js
