[package]
name = "video-player"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.55"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"
web-sys = { version = "0.3.55", features = [
	"CanvasRenderingContext2d",
	"Document",
	"HtmlCanvasElement",
	"HtmlVideoElement",
	"ImageData",
	"Response",
	"Window",
] }
